# agent-first-dev

./: FRAMEWORK.md  LICENSE  LLM_LECTURE.md  README.md  TERMINOLOGY.md  pyproject.toml
.github/workflows/: ci.yml
ci/ollama/: __init__.py
guides/: README.md  deployment-cn.md
modules/agentic-coding/: README.md
modules/agentic-coding/week1/: README.md  assignment-zh.md  writeup-zh.md
modules/agentic-coding/week10/: README.md
modules/agentic-coding/week2/: README.md  assignment-zh.md  writeup-zh.md
modules/agentic-coding/week3/: README.md  assignment-zh.md  writeup-zh.md
modules/agentic-coding/week4/: README.md  assignment-zh.md  writeup-zh.md
modules/agentic-coding/week5/: README.md  assignment-zh.md  writeup-zh.md
modules/agentic-coding/week6/: README.md  assignment-zh.md  writeup-zh.md
modules/agentic-coding/week7/: README.md  assignment-zh.md  writeup-zh.md
modules/agentic-coding/week8/: README.md  assignment-zh.md  writeup-zh.md
modules/agentic-coding/week9/: README.md
modules/app-dev-fundamentals/: README.md
modules/app-dev-fundamentals/01-how-the-web-works/: README.md
modules/app-dev-fundamentals/02-data-modeling/: README.md
modules/app-dev-fundamentals/03-request-lifecycle/: README.md
modules/getting-started/: README.md
resources/: README.md
week1/: chain_of_thought.py  k_shot_prompting.py
week4/: AGENTS.md  CLAUDE.md  Makefile  codex_week4.ps1
week4/.codex/: auth.json  history.jsonl  models_cache.json  version.json
week4/scripts/: verify.md
week7/: assignment.md
week8/: assignment.md  writeup.md
(+18 files in other folders)
